Leaderboard, fishing, stats, exp.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "chadbot",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Discord rpg economy bot for your Discord server! Create a .env file and fill out DB vars and bot token.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node main.js",
+    "server": "nodemon main.js"
   },
   "author": "ChadMaster",
   "license": "ISC",
